# goodolpypi

./: .gitignore  README.md  setup.cfg  setup.py  tox.ini
goodolpypi/: __init__.py  __main__.py  main.py
tests/: test_basic.py  test_everything.py
