[metadata]
name = goodolpypi
version = 0.0.1
url = https://github.com/gchaperon/goodolpypi
author = Gabriel Chaperon
description = Fetch latest version for packages at a given date
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
install_requires =
  packaging
python_requires = >=3.7

[options.entry_points]
console_scripts = 
  goodolpypi = goodolpypi.main:main
